--- a/order-summary/style.css
+++ b/order-summary/style.css
@@ -36,6 +36,10 @@ img {
   height: auto;
 }
 
+a:hover {
+  opacity: 0.9;
+}
+
 body {
   /* background-color: var(--pale-blue);
   background-image: url(/images/pattern-background-desktop.svg);
@@ -55,6 +59,7 @@ main {
 
 .btn {
   border-radius: 0.5rem;
+  cursor: pointer;
   display: block;
   font-size: 0.9rem;
   font-weight: 700;
@@ -68,6 +73,10 @@ main {
   background-color: var(--bright-blue);
   color: #fff;
   filter: drop-shadow(0 10px 10px rgb(56, 41, 224, 0.5));
+}
+
+.btn-primary:hover {
+  opacity: 0.9;
 }
 
 .btn-secondary {
