--- a/time-tracking/style.css
+++ b/time-tracking/style.css
@@ -40,3 +40,121 @@ main {
   display: grid;
   gap: 2rem;
 }
+
+/* || Components */
+
+/* Card Component */
+.card {
+  background-color: var(--dark-blue);
+  border-radius: 1rem;
+}
+
+.header__image {
+  position: absolute;
+  right: 1rem;
+}
+
+.card__header {
+  border-radius: 1rem 1rem 0 0;
+  height: 3.5rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.card__body {
+  background-color: var(--dark-blue);
+  border-radius: 1.25rem 1rem 1.25rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem;
+  transform: translateY(-1rem);
+}
+
+/* Left Side of Card Component */
+.card__title {
+  font-weight: bold;
+  margin-bottom: 0.75rem;
+}
+
+.card__status {
+  font-size: 1.8rem;
+  font-weight: 300;
+}
+
+/* Right Side of Card Component */
+.card__body .right {
+  text-align: right;
+}
+
+.card__option {
+  margin-bottom: 1.75rem;
+}
+
+.card__last-week {
+  font-size: 0.8rem;
+  color: var(--pale-blue);
+}
+
+/* Profile Card Component */
+.profile__header {
+  align-items: center;
+  justify-content: center;
+  background: var(--blue);
+  border-radius: 1rem;
+  display: flex;
+  gap: 1rem;
+  padding: 2rem 1rem;
+}
+
+.profile__image {
+  border: 3px solid #fff;
+  border-radius: 50%;
+  width: 3.5rem;
+}
+
+.profile__exp > span {
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: var(--pale-blue);
+}
+
+.profile__name {
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+
+.profile__body {
+  color: var(--desatured-blue);
+  display: flex;
+  justify-content: space-around;
+  padding: 1.5rem 1rem;
+}
+
+.preference.active {
+  color: #fff;
+}
+
+/* Cards */
+.work .card__header {
+  background: var(--work-color);
+}
+
+.play .card__header {
+  background: var(--play-color);
+}
+
+.study .card__header {
+  background: var(--study-color);
+}
+
+.exercise .card__header {
+  background: var(--exercise-color);
+}
+
+.social .card__header {
+  background: var(--social-color);
+}
+
+.self-care .card__header {
+  background: var(---self-care-color);
+}
