--- a/time-tracking/style.css
+++ b/time-tracking/style.css
@@ -36,6 +36,8 @@ body {
 main {
   padding: 2rem 0;
   width: 90%;
+  height: 100vh;
+  max-width: 1280px;
   margin: 0 auto;
   display: grid;
   gap: 2rem;
@@ -103,7 +105,7 @@ main {
   border-radius: 1rem;
   display: flex;
   gap: 1rem;
-  padding: 2rem 1rem;
+  padding: 2rem;
 }
 
 .profile__image {
@@ -157,4 +159,92 @@ main {
 
 .self-care .card__header {
   background: var(---self-care-color);
+}
+
+@media screen and (min-width: 720px) {
+  main {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 12rem;
+  }
+
+  .profile {
+    grid-column: 1 / 3;
+  }
+
+  .profile__image {
+    width: 4rem;
+  }
+
+  .profile__exp > span {
+    font-size: 0.9rem;
+  }
+
+  .profile__name {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  main {
+    grid-template-columns: repeat(3, 1fr);
+    align-content: center;
+  }
+
+  .profile {
+    grid-column: 1;
+    grid-row: 1 / span 3;
+  }
+
+  .profile__header {
+    height: 30rem;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .profile__image {
+    width: 8rem;
+    margin-bottom: 2rem;
+  }
+
+  .profile__exp > span {
+    font-size: 1rem;
+  }
+
+  .profile__name {
+    font-size: 2.5rem;
+    line-height: 1.2;
+    margin-top: 0.75rem;
+  }
+
+  .profile__body {
+    font-size: 1.15rem;
+    flex-direction: column;
+    gap: 1.25rem;
+  }
+}
+
+@media screen and (min-width: 1360px) {
+  main {
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 15rem;
+  }
+
+  .profile {
+    grid-row: 1 / span 2;
+  }
+
+  .profile__header {
+    height: 22rem;
+  }
+
+  .card__status {
+    font-size: 3rem;
+  }
+
+  .card__last-week {
+    font-size: 1rem;
+    position: absolute;
+    bottom: 0;
+    left: 30px;
+  }
 }
